--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -506,7 +506,6 @@ tide:
     - release-4.1
     - release-4.2
     - release-4.3
-    - release-4.4
     - release-4.5
     - release-4.6
     - openshift-4.1
@@ -668,11 +667,168 @@ tide:
     - openshift/openshift-tests
     - openshift/csi-driver-nfs
   - includedBranches:
+    - release-4.4
+    labels:
+    - lgtm
+    - approved
+    - bugzilla/valid-bug
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - bugzilla/invalid-bug
+    repos:
+    - openshift/ansible-service-broker
+    - openshift/api
+    - openshift/apiserver-library-go
+    - openshift/baremetal-operator
+    - openshift/baremetal-runtimecfg
+    - openshift/builder
+    - openshift/client-go
+    - openshift/cloud-credential-operator
+    - openshift/cloud-provider-openstack
+    - openshift/cluster-api-actuator-pkg
+    - openshift/cluster-api-provider-aws
+    - openshift/cluster-api-provider-azure
+    - openshift/cluster-api-provider-baremetal
+    - openshift/cluster-api-provider-gcp
+    - openshift/cluster-api-provider-kubemark
+    - openshift/cluster-api-provider-libvirt
+    - openshift/cluster-api-provider-openstack
+    - openshift/cluster-api-provider-ovirt
+    - openshift/cluster-authentication-operator
+    - openshift/cluster-autoscaler-operator
+    - openshift/cluster-bootstrap
+    - openshift/cluster-config-operator
+    - openshift/cluster-csi-snapshot-controller-operator
+    - openshift/cluster-dns-operator
+    - openshift/cluster-etcd-operator
+    - openshift/cluster-image-registry-operator
+    - openshift/cluster-ingress-operator
+    - openshift/cluster-kube-apiserver-operator
+    - openshift/cluster-kube-controller-manager-operator
+    - openshift/cluster-kube-descheduler-operator
+    - openshift/cluster-kube-scheduler-operator
+    - openshift/cluster-kube-storage-version-migrator-operator
+    - openshift/cluster-logging-operator
+    - openshift/cluster-machine-approver
+    - openshift/cluster-monitoring-operator
+    - openshift/cluster-network-operator
+    - openshift/cluster-nfd-operator
+    - openshift/cluster-node-tuning-operator
+    - openshift/cluster-openshift-apiserver-operator
+    - openshift/cluster-openshift-controller-manager-operator
+    - openshift/cluster-policy-controller
+    - openshift/cluster-resource-override-admission
+    - openshift/cluster-resource-override-admission-operator
+    - openshift/cluster-samples-operator
+    - openshift/cluster-storage-operator
+    - openshift/cluster-svcat-apiserver-operator
+    - openshift/cluster-svcat-controller-manager-operator
+    - openshift/cluster-update-keys
+    - openshift/cluster-version-operator
+    - openshift/compliance-operator
+    - openshift/configmap-reload
+    - openshift/console
+    - openshift/console-operator
+    - openshift/coredns-mdns
+    - openshift/csi-cluster-driver-registrar
+    - openshift/csi-driver-registrar
+    - openshift/csi-external-attacher
+    - openshift/csi-external-provisioner
+    - openshift/csi-external-resizer
+    - openshift/csi-external-snapshotter
+    - openshift/csi-livenessprobe
+    - openshift/csi-node-driver-registrar
+    - openshift/csi-operator
+    - openshift/custom-resource-status
+    - openshift/elasticsearch-operator
+    - openshift/elasticsearch-proxy
+    - openshift/etcd
+    - openshift/external-storage
+    - openshift/federation-v2-operator
+    - openshift/grafana
+    - openshift/image-registry
+    - openshift/images
+    - openshift/insights-operator
+    - openshift/installer
+    - openshift/ironic-hardware-inventory-recorder-image
+    - openshift/ironic-image
+    - openshift/ironic-inspector-image
+    - openshift/ironic-ipa-downloader
+    - openshift/ironic-rhcos-downloader
+    - openshift/ironic-static-ip-manager
+    - openshift/jenkins
+    - openshift/k8s-prometheus-adapter
+    - openshift/kubecsr
+    - openshift/kubernetes
+    - openshift/kube-rbac-proxy
+    - openshift/kube-state-metrics
+    - openshift/kubernetes-kube-storage-version-migrator
+    - openshift/kuryr-kubernetes
+    - openshift/leader-elector
+    - openshift/library-go
+    - openshift/local-storage-operator
+    - openshift/loki
+    - openshift/metal3-smart-exporter
+    - openshift/sig-storage-local-static-provisioner
+    - openshift/machine-api-operator
+    - openshift/machine-config-operator
+    - openshift/mdns-publisher
+    - openshift/multus-cni
+    - openshift/must-gather
+    - openshift/node_exporter
+    - openshift/node-feature-discovery
+    - openshift/node-problem-detector
+    - openshift/node-problem-detector-operator
+    - openshift/oauth-proxy
+    - openshift/oauth-server
+    - openshift/oc
+    - openshift/openshift-ansible
+    - openshift/openshift-apiserver
+    - openshift/openshift-controller-manager
+    - openshift/openshift-state-metrics
+    - openshift/openshift-tuned
+    - openshift/oauth-apiserver
+    - openshift/origin
+    - openshift/origin-aggregated-logging
+    - openshift/ovirt-csi-driver
+    - openshift/ovn-kubernetes
+    - openshift/prometheus
+    - openshift/prometheus-alertmanager
+    - openshift/prometheus-operator
+    - openshift/prom-label-proxy
+    - openshift/route-override-cni
+    - openshift/router
+    - openshift/runtime-utils
+    - openshift/sdn
+    - openshift/service-catalog
+    - openshift/service-ca-operator
+    - openshift/telemeter
+    - openshift/template-service-broker
+    - openshift/template-service-broker-operator
+    - openshift/thanos
+    - openshift/vertical-pod-autoscaler-operator
+    - openshift/whereabouts-cni
+    - operator-framework/ghostunnel
+    - operator-framework/hadoop
+    - operator-framework/helm
+    - operator-framework/hive
+    - operator-framework/operator-lifecycle-manager
+    - operator-framework/operator-marketplace
+    - operator-framework/operator-metering
+    - operator-framework/operator-registry
+    - operator-framework/presto
+    - openshift/file-integrity-operator
+    - openshift/openshift-tests
+    - openshift/csi-driver-nfs
+  - includedBranches:
     - release-4.0
     - release-4.1
     - release-4.2
     - release-4.3
-    - release-4.4
     - release-4.5
     - release-4.6
     - openshift-4.1
@@ -680,6 +836,33 @@ tide:
     - lgtm
     - bugzilla/valid-bug
     - cherry-pick-approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - bugzilla/invalid-bug
+    repos:
+    - openshift/cluster-capacity
+    - openshift/containernetworking-plugins
+    - openshift/coredns
+    - openshift/descheduler
+    - openshift/kubernetes-autoscaler
+    - openshift/multus-admission-controller
+    - openshift/ocp-release-operator-sdk
+    - openshift/service-ca-operator
+    - openshift/sriov-cni
+    - openshift/sriov-dp-admission-controller
+    - openshift/sriov-network-device-plugin
+    - openshift/sriov-network-operator
+    - openshift/linuxptp-daemon
+    - openshift/ptp-operator
+  - includedBranches:
+    - release-4.4
+    labels:
+    - lgtm
+    - bugzilla/valid-bug
     missingLabels:
     - needs-rebase
     - do-not-merge/blocked-paths
