Deck route: Use a 90s backend timeout

--- a/core-services/prow/03_deployment/deck.yaml
+++ b/core-services/prow/03_deployment/deck.yaml
@@ -11,6 +11,8 @@ objects:
   metadata:
     name: deck
     namespace: ci
+    annotations:
+      haproxy.router.openshift.io/timeout: "90s"
   spec:
     port:
       targetPort: 8080
@@ -25,6 +27,8 @@ objects:
   metadata:
     namespace: ci
     name: prow
+    annotations:
+      haproxy.router.openshift.io/timeout: "90s"
   spec:
     port:
       targetPort: 8080
@@ -222,6 +226,8 @@ objects:
   metadata:
     namespace: ci
     name: deck-internal
+    annotations:
+      haproxy.router.openshift.io/timeout: "90s"
   spec:
     tls:
       insecureEdgeTerminationPolicy: Redirect
