Boskos cleaner: Use the controller-based implementation

--- a/core-services/prow/03_deployment/boskos_cleaner.yaml
+++ b/core-services/prow/03_deployment/boskos_cleaner.yaml
@@ -31,8 +31,8 @@ spec:
       - name: boskos-cleaner
         image: gcr.io/k8s-prow/boskos/cleaner:v20200226-fd34fd5f2
         args:
-        - --cleaner-count=1
         - --boskos-url=http://boskos
+        - --use-v2-implementation=true
         - --namespace=$(namespace)
         - --log-level=debug
         env:
