add imagestream/layers in ocp-private ci-operator rbacs

--- a/core-services/openshift-priv/admin_roles.yaml
+++ b/core-services/openshift-priv/admin_roles.yaml
@@ -19,6 +19,7 @@ items:
     - imagestreamtags
     - imagestreams
     - imagestreamimports
+    - imagestreams/layers
     verbs:
     - update
     - patch
