--- a/core-services/prow/03_deployment/admin_boskos_rbac.yaml
+++ b/core-services/prow/03_deployment/admin_boskos_rbac.yaml
@@ -7,6 +7,29 @@ rules:
   verbs: ["*"]
   resources: ["*"]
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name:  boskos
+  namespace: ci
+rules:
+- apiGroups:
+  - ""
+  resourceNames:
+  - boskos-cleaner-leaderlock
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - update
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  - events
+  verbs:
+  - create
+---
 kind: ServiceAccount
 apiVersion: v1
 metadata:
@@ -27,6 +50,19 @@ roleRef:
   kind: ClusterRole
   name: boskos
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: boskos
+  namespace: ci
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: boskos
+subjects:
+- kind: ServiceAccount
+  name: boskos
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
