--- a/ci-operator/config/openshift/release/openshift-release-master__nightly-4.13.yaml
+++ b/ci-operator/config/openshift/release/openshift-release-master__nightly-4.13.yaml
@@ -143,6 +143,16 @@ tests:
       enable:
       - observers-resource-watch
     workflow: openshift-e2e-aws-single-node-workers-upgrade-conformance
+- as: e2e-aws-ovn-single-node-recert
+  interval: 168h
+  steps:
+    cluster_profile: aws-2
+    env:
+      BASE_DOMAIN: aws-2.ci.openshift.org
+    observers:
+      enable:
+      - observers-resource-watch
+    workflow: openshift-e2e-aws-single-node-recert
 - as: e2e-aws-ovn-single-node
   interval: 168h
   steps:
