--- a/ci-operator/step-registry/hypershift/mce/agent/conformance/hypershift-mce-agent-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/agent/conformance/hypershift-mce-agent-conformance-workflow.yaml
@@ -1,32 +1,34 @@
 workflow:
-  as: hypershift-agent-conformance
+  as: hypershift-mce-agent-conformance
   documentation: |-
     The HyperShift agent conformance workflow executes tests against a new ephemeral
   steps:
     allow_best_effort_post_steps: true
     allow_skip_on_success: true
     post:
-    - chain: hypershift-dump
-    - chain: hypershift-agent-destroy
-    - ref: assisted-baremetal-operator-gather
+    - ref: wait
     - ref: baremetalds-packet-gather-metadata
     - chain: baremetalds-ipi-post
     test:
     - chain: hypershift-conformance
     pre:
-    - chain: assisted-baremetal-operator
-    - ref: wait
+    - ref: assisted-baremetal-conf-devscripts
+    - ref: assisted-baremetal-conf-user-data
+    - chain: baremetalds-ipi-pre
     - ref: enable-qe-catalogsource
-    - ref: hypershift-install
-    - chain: hypershift-agent-create
+    - chain: hypershift-mce-agent-lvm
+    - ref: hypershift-mce-install
+    - chain: hypershift-mce-agent-create
     env:
       PACKET_PLAN: "m3.large.x86"
       USER_DATA_FILENAME: "user-data"
-      DISCONNECTED: "false"
       NUM_EXTRA_WORKERS: "3"
       DEVSCRIPTS_CONFIG: |
         IP_STACK=v4
         NETWORK_TYPE=OVNKubernetes
+        VM_EXTRADISKS=true
+        VM_EXTRADISKS_LIST=vda
+        VM_EXTRADISKS_SIZE=1024G
         EXTRA_WORKER_VCPU=8
         EXTRA_WORKER_MEMORY=16384
         EXTRA_WORKER_DISK=100
