--- a/ci-operator/config/stolostron/olm-addon/stolostron-olm-addon-main.yaml
+++ b/ci-operator/config/stolostron/olm-addon/stolostron-olm-addon-main.yaml
@@ -1,4 +1,8 @@
 base_images:
+  base:
+    name: ubi-minimal
+    namespace: ocp
+    tag: "8"
   stolostron_builder_go1.19-linux:
     name: builder
     namespace: stolostron
@@ -11,6 +15,7 @@ build_root:
     tag: go1.19-linux
 images:
 - dockerfile_path: Dockerfile
+  from: base
   inputs:
     stolostron_builder_go1.19-linux:
       as:
@@ -18,9 +23,9 @@ images:
   to: olm-addon-controller
 - dockerfile_path: cleaner-Dockerfile
   inputs:
-    stolostron_builder_go1.19-linux:
+    base:
       as:
-      - registry.ci.openshift.org/stolostron/builder:go1.19-linux
+      - registry.ci.openshift.org/ocp/ubi-minimal:8
   to: olm-addon-cleaner
 promotion:
   name: "2.9"
