--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__service-interconnect-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__service-interconnect-ocp4.14-lp-interop.yaml
@@ -36,7 +36,7 @@ tests:
           {"step": "gather-*", "failure_type": "all", "classification": "Other", "jira_project": "LPTOCPCI"},
           {"step": "openshift-*", "failure_type": "all", "classification": "Other", "jira_project": "LPTOCPCI"},
           {"step": "rhsi-run-tests", "failure_type": "pod_failure", "classification": "Test Execution", "jira_project": "LPTOCPCI"},
-          {"step": "rhsi-run-tests", "failure_type": "test_failure", "classification": "Test Failure", "jira_project": "LPTOCPCI"}
+          {"step": "rhsi-run-tests", "failure_type": "test_failure", "classification": "Test Failure", "jira_project": "SKUPPER"}
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: LPTOCPCI
       FIREWATCH_FAIL_WITH_TEST_FAILURES: "true"
