--- a/ci-operator/config/openshift/cluster-api-operator/openshift-cluster-api-operator-main.yaml
+++ b/ci-operator/config/openshift/cluster-api-operator/openshift-cluster-api-operator-main.yaml
@@ -63,6 +63,14 @@ tests:
   steps:
     cluster_profile: azure4
     workflow: openshift-e2e-azure-capi
+- always_run: false
+  as: e2e-azure-manual-oidc
+  optional: true
+  steps:
+    cluster_profile: azure4
+    env:
+      ENABLE_TECH_PREVIEW_CREDENTIALS_REQUESTS: "true"
+    workflow: openshift-e2e-azure-manual-oidc-workload-identity
 zz_generated_metadata:
   branch: main
   org: openshift
