--- a/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-release-4.15.yaml
+++ b/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-release-4.15.yaml
@@ -18,10 +18,11 @@ images:
         source_path: /usr/bin/oc
   to: src-upgrade-ci
 promotion:
-  excluded_images:
-  - src-upgrade-ci
+  additional_images:
+    cnv-ci-src: src
+    cnv-ci-src-upgrade: src-upgrade-ci
   name: "4.15"
-  namespace: ocp
+  namespace: cnv
 releases:
   initial:
     integration:
