--- a/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
+++ b/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
@@ -14,7 +14,12 @@ build_root:
     namespace: ocp
     tag: rhel-8-golang-1.20-openshift-4.14
 images:
-- context_dir: .
+- build_args:
+  - name: TARGETOS
+    value: linux
+  - name: TARGETARCH
+    value: amd64
+  context_dir: .
   dockerfile_path: Dockerfile
   to: kepler-operator
 operator:
@@ -54,9 +59,9 @@ tests:
     - as: install
       cli: latest
       commands: |
-        oc create namespace kepler-operator
-        operator-sdk run bundle -n kepler-operator "$OO_BUNDLE" --install-mode AllNamespaces --skip-tls
-        oc wait --for condition=Available -n kepler-operator deployment kepler-operator-controller-manager
+        operator-sdk run bundle -n openshift-operators "$OO_BUNDLE"
+        oc wait --for condition=Available -n openshift-operators deployment kepler-operator-controller-manager
+        oc logs -n openshift-operators deployment/kepler-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: kepler-bundle
