--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-nightly.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-nightly.yaml
@@ -55,11 +55,25 @@ tests:
       ENABLE_AUTOSCALING: "false"
       MULTI_AZ: "true"
       OPENSHIFT_VERSION: "4.12"
+      REPLICAS: "24"
+    test:
+    - ref: openshift-qe-cluster-density-v2
+    workflow: rosa-aws-sts
+- as: perfscale-rosa-multiaz-node-density-v2-24nodes-periodic
+  cron: 0 8 * * 3
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.12"
       PODS_PER_NODE: "100"
       READY_WAIT_TIMEOUT: 30m
       REPLICAS: "24"
     test:
-    - ref: openshift-qe-cluster-density-v2
+    - chain: openshift-qe-node-density
     workflow: rosa-aws-sts
 - as: perfscale-rosa-multiaz-data-path-9nodes-periodic
   cron: 0 12 * * 5
