--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.13-nightly.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.13-nightly.yaml
@@ -35,7 +35,7 @@ tests:
     test:
     - chain: openshift-qe-cluster-density-v2
     workflow: rosa-aws-sts
-- as: perfscale-rosa-multiaz-ci-tests-24nodes-periodic
+- as: perfscale-rosa-multiaz-cluster-density-v2-24nodes-periodic
   cron: 0 12 * * 0
   steps:
     cluster_profile: aws-perfscale-qe
@@ -48,7 +48,7 @@ tests:
       READY_WAIT_TIMEOUT: 30m
       REPLICAS: "24"
     test:
-    - chain: openshift-qe-ocp-qe-perfscale-ci-tests
+    - chain: openshift-qe-cluster-density-v2
     workflow: rosa-aws-sts
 - as: perfscale-rosa-hcp-3zones-cluster-density-v2-24nodes-periodic
   cron: 0 12 * * 1
@@ -96,6 +96,22 @@ tests:
       OPENSHIFT_VERSION: "4.13"
       PODS_PER_NODE: "100"
       REPLICAS: "3"
+    test:
+    - chain: openshift-qe-node-density
+    workflow: rosa-aws-sts
+- as: perfscale-rosa-multiaz-node-density-24nodes-periodic
+  cron: 0 12 * * 2
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.13"
+      PODS_PER_NODE: "100"
+      READY_WAIT_TIMEOUT: 30m
+      REPLICAS: "24"
     test:
     - chain: openshift-qe-node-density
     workflow: rosa-aws-sts
