--- a/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
@@ -326,8 +326,10 @@ tests:
       GO_VERSION: 1.20.7
       JQ_VERSION: "1.6"
       OCP_VERSION: "4.14"
+      REGION: au-syd
       RESOURCE_GROUP: ipi-cicd-resource-group
       TERRAFORM_VERSION: 1.5.5
+      WORKERS: "2"
       YQ_VERSION: 4.30.5
     workflow: openshift-e2e-ibmcloud-heterogeneous-upi
 - as: ocp-e2e-azure-ovn-arm64
