--- a/ci-operator/step-registry/ipi/conf/ibmcloud/ipi-conf-ibmcloud-ref.yaml
+++ b/ci-operator/step-registry/ipi/conf/ibmcloud/ipi-conf-ibmcloud-ref.yaml
@@ -55,10 +55,18 @@ ref:
       A fully-qualified domain or subdomain name. The base domain of the cloud
       provider is used for setting baseDomain variable of the install
       configuration of the cluster.
+  - name: REGION
+    default: ""
+    documentation: |-
+      The region where the cluster is installed.
   - name: RESOURCE_GROUP
     default: ""
     documentation: |-
       The resource group where the resources are installed in support of the installation.
+  - name: WORKERS
+    default: ""
+    documentation: |-
+      The number of workers created during installation.
   documentation: >-
     This step configures an install-config.yaml file to depoloy to the IBM
     Cloud CI project.
