--- a/core-services/prow/02_config/codeready-toolchain/toolchain-e2e/_pluginconfig.yaml
+++ b/core-services/prow/02_config/codeready-toolchain/toolchain-e2e/_pluginconfig.yaml
@@ -36,6 +36,7 @@ external_plugins:
 lgtm:
 - repos:
   - codeready-toolchain/toolchain-e2e
+  review_acts_as_lgtm: false
 plugins:
   codeready-toolchain/toolchain-e2e:
     plugins:
