--- a/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
+++ b/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
@@ -16,7 +16,7 @@ images:
 operator:
   bundles:
   - as: dvo-operator-bundle
-    context_dir: deploy/openshift/
+    context_dir: .
     dockerfile_path: bundle.Dockerfile
   substitutions:
   - pullspec: quay.io/deployment-validation-operator/dv-operator:latest
